<resources>
    <string name="app_name">Store App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="empolyee_id">Employee ID</string>
    <string name="store">Store</string>
    <string name="app">App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="store_app">Store App</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="picklist">Pick List</string>
    <string name="bin_transfer">Bin Transfer</string>
    <string name="stock_receive">Stock Receive</string>
    <string name="order_request">Order Request</string>
    <string name="item_inventory">Item Inventory</string>
    <string name="bin_inventory">Bin Inventory</string>
    <string name="message">MESSAGE</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="total_qty">Total Qty</string>
    <string name="barcode">Barcode</string>
    <string name="retail_selling_price">Retail Selling Price</string>
    <string name="reserved">Reserved</string>
    <string name="available_qty">Available Qty</string>
    <string name="pending">Pending</string>
    <string name="transfered">Transfered</string>
    <string name="invoice_number">INVOICE NUMBER</string>
    <string name="type">TYPE</string>
    <string name="document_number">DOCUMENT NUMBER</string>
    <string name="total_item">TOTAL ITEM</string>
    <string name="active">Active</string>
    <string name="status">Status</string>
    <string name="source_bin">SOURCE BIN</string>
    <string name="destination_bin">DESTINATION BIN</string>
    <string name="item">ITEM</string>
    <string name="quantity">QUANTITY</string>
    <string name="store_code">STORE CODE</string>
    <string name="transfer">Transfer</string>
    <string name="picklist_transfer">PICK LIST TRANSFER</string>
    <string name="enter_item">Enter item code or scan barcode</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="verify_shipment">Verify your shipment</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="shop_items">SHOP PICK</string>
    <string name="instore_transaction">In-Store Transaction</string>
    <string name="warehouse_transaction">Warehouse Transaction</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="stock_return">Stock Return</string>
    <string name="item_code">Item Code</string>
    <string name="order_qty">Order Qty</string>
    <string name="scanned_qty">Scan Qty</string>
    <string name="remarks">Remarks</string>
    <string name="order_no">Order No</string>
    <string name="from_location">From Location</string>
    <string name="wh_location">WH Location</string>
    <string name="final_location_code">Final Location Code</string>
    <string name="enter_barcode">Enter Item Barcode</string>
    <string name="add">Add</string>
    <string name="document_no">Document No</string>
    <string name="date">Date</string>
    <string name="no_records">No records found to show</string>
    <string name="finish">Finish</string>
    <string name="search">Search</string>
    <string name="open_small_case">Open</string>
    <string name="order_ref_no">Order Ref No</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="pick">Pick</string>
    <string name="transfer_type">Transfer Type:</string>
    <string name="from_location_colon">From Location</string>
    <string name="to_location">To Location</string>
    <string name="submit">Submit</string>
    <string name="receive">RECEIVE</string>
    <string name="id">ID</string>
    <string name="ref_no">Ref No:</string>
    <string name="to_location_">To Location</string>
    <string name="qty">Qty</string>
    <string name="rcvd_qty">Rcvd Qty</string>
    <string name="s_no">S.No</string>
    <string name="item_code_small">Item Code</string>
    <string name="receipt_qty">Receipt Qty</string>
    <string name="collection_qty">Collection Qty</string>
    <string name="item_description">Item Description</string>
    <string name="quantity_small">Quantity</string>
    <string name="document_no_colon">Document No</string>
    <string name="stock_receipts">Stock Receive</string>
    <string name="add_stock">Add Stock</string>
    <string name="wms_login">WMS Login</string>
    <string name="enter_remarks">Enter your remarks here</string>
    <string name="scan_shipment">Scan Shipment</string>
    <string name="alert">ALERT</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_picklist_record">No Pick List Record Found !</string>
    <string name="type_of_transfer">Type of Trans:</string>
    <string name="scan_barcode_">Scan Barcode:</string>
    <string name="remarks_">Remarks:</string>
    <string name="priority_">Priority:</string>
    <string name="delete">DELETE</string>
    <string name="reserved_qty">Reserved Qty</string>
    <string name="confirm_qty">Confirm Qty</string>
    <string name="enter_bincode">Enter Bincode</string>
    <string name="add_stock_return">Add Stock Return</string>
    <string name="location_colon">Location:</string>
    <string name="date_colon">Date:</string>
    <string name="enter_style">Enter Model</string>
    <string name="sku">SKU</string>
    <string name="in_Stock">Instock</string>
    <string name="count">Count</string>
    <string name="diff">Diff</string>
    <string name="tot_stock">Tot Stock</string>
    <string name="tot_count">Tot Count</string>
    <string name="tot_diff">Tot Diff</string>
    <string name="sale_qty">Sale Qty</string>
    <string name="source_bin_small">Source Bin</string>
    <string name="destination_bin_small">Destination Bin</string>
    <string name="s_bin">S.Bin</string>
    <string name="item_small">Item</string>
    <string name="d_bin">D.Bin</string>
    <string name="enter_source_bin">Enter Source Bin</string>
    <string name="enter_item_code">Enter Item Code</string>
    <string name="enter_destination_bin">Enter Destination Bin</string>
    <string name="skip">Skip</string>
    <string name="r_qty">R.Qty</string>
    <string name="c_qty">C.Qty</string>
    <string name="from_location_small">Fr.Loc</string>
    <string name="to_location_small">To Loc</string>
    <string name="receipt_qty_total">Tot R.Qty</string>
    <string name="tot_scanned_qty">Tot S.Qty</string>
    <string name="tot_skipped_qty">Tot Skip.Qty</string>
    <string name="total_scanned_qty">Tot Scan.Qty</string>
    <string name="reason_caps">REASON</string>
    <string name="select_reason">Select Reason</string>
    <string name="cancel">Cancel</string>
    <string name="process">Submit</string>
    <string name="online_requests">Online Requests</string>
    <string name="default_">Set to Default</string>
    <string name="inventory">Inventory</string>
    <string name="bincode">Bin code</string>
    <string name="bincode_">Bincode</string>
    <string name="skipped">SKIPPED</string>
    <string name="item_search">Item Search</string>
    <string name="qty_caps">QTY</string>
    <string name="search_message">You can search Item by default. Please check the box to search bincode</string>
    <string name="barcode_caps">Barcode</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="create_picklist">Create Picklist</string>
    <string name="model">Model</string>
    <string name="move_qty">Move Qty</string>
    <string name="scan_qty">Scan Qty:</string>
    <string name="skip_qty">Skip Qty:</string>
    <string name="bincode_small">Bincode</string>
    <string name="enquiry_search">Enquiry Search</string>
    <string name="instore_transcations">Instore Transactions</string>
    <string name="wms_transactions">Warehouse Transactions</string>
    <string name="other">Others</string>
    <string name="scan_product">Scan Product</string>
    <string name="search_product">Search Product</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="inv_no">Inv.No</string>
    <string name="type_small">Type</string>
    <string name="doc_no">Doc.No</string>
    <string name="total_items">Total Items</string>
    <string name="enter_the_details">Enter the Details</string>
    <string name="source_bin_caps">Source Bin</string>
    <string name="total_skip_qty">Total Skip Qty</string>
    <string name="total_scan_qty">Total Scan Qty</string>
    <string name="total_qty_">Total Qty</string>
    <string name="default_bin">Default Bin</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_your_pswd">Forgot Your Password</string>
    <string name="new_user">New User Create Account</string>
    <string name="here">Here</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_pswd">Forgot Password</string>
    <string name="send_caps">SEND</string>
    <string name="please_enter_email">Please enter your email address. You will receive a link to create a new password via email</string>
    <string name="email">Email<font fgcolor="red">*</font></string>
    <string name="have_sent_mail">We have sent a mail containing link to reset your password to</string>
    <string name="riva">Riva</string>
    <string name="riva_look_book">Riva Look Book</string>
    <string name="category">Category</string>
    <string name="error_unexpected_message">Unexpected Error</string>
    <string name="products">Products</string>
    <string name="sale_ends_in">SALE ENDS IN</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="mins">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="new_badge">New</string>
    <string name="category_caps">CATEGORY</string>
    <string name="home_caps">HOME</string>
    <string name="bag">BAG</string>
    <string name="subcollection">Subcollection</string>
    <string name="editorials">Editorials</string>
    <string name="search_caps">SEARCH</string>
    <string name="place_order">Place order</string>
    <string name="order_success">Order Success</string>
    <string name="shipments">Shipments</string>
    <string name="store_pickup_orders">Store Pickup Orders</string>
    <string name="order_history">Order History</string>
    <string name="order_details_">Order Details</string>
</resources>