<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_riva_home"
        android:layout_gravity="center_vertical"
        android:enabled="true"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/home_caps" />

    <item
        android:id="@+id/navigation_search"
        android:layout_gravity="center_vertical"
        android:enabled="true"
        android:icon="@drawable/nav_search_selector"
        android:title="@string/search_caps" />

    <item
        android:id="@+id/navigation_category"
        android:layout_gravity="center_vertical"
        android:enabled="true"
        android:icon="@drawable/nav_category_selector"
        android:title="@string/category_caps" />

<!--    <item-->
<!--        android:id="@+id/navigation_scan"-->
<!--        android:layout_gravity="center_vertical"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_barcode_black"-->
<!--        android:title="@string/scan" />-->
    <item
        android:id="@+id/navigation_bag"
        android:layout_gravity="center_vertical"
        android:enabled="true"
        android:icon="@drawable/nav_bag_selector"
        android:title="@string/bag" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_profile"-->
    <!--        android:icon="@drawable/ic_profile"-->
    <!--        android:title="@string/profile" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_orders"-->
    <!--        android:icon="@drawable/ic_order"-->
    <!--        android:title="@string/my_orders" />-->

</menu>