<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim_off_white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlackText.Medium"
                android:text="@string/model"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_picklist"
                style="@style/White.Large"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/yellow_rounded_rectangle"
                android:padding="8dp"
                android:text="@string/create_picklist"
                android:textAppearance="@android:style/TextAppearance"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView6" />

            <LinearLayout
                android:id="@+id/lv_model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/white_rounded_rectangle"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14">

                <EditText
                    android:id="@+id/edt_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:maxLength="20"
                    android:fontFamily="@font/urbanist_medium"
                    android:inputType="textCapCharacters"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageButtonModelSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_32" />

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lv_model"
                app:layout_constraintTop_toBottomOf="@+id/lv_model">

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_violet"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            style="@style/White.Medium"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/source_bin_small" />

                        <TextView
                            style="@style/White.Medium"
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:text="@string/item_code_small" />

                        <TextView
                            style="@style/White.Medium"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_bin_small" />

                        <TextView
                            style="@style/White.Medium"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/total_qty" />

                        <TextView
                            style="@style/White.Medium"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/move_qty" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView2"
                style="@style/VioletText.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/enter_the_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>